# Codexa

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: backend-ci.yml  frontend-ci.yml
codexa-ui/: eslint.config.mjs  package-lock.json  package.json
codexa-ui/app/: globals.css  layout.tsx  page.tsx
codexa-ui/app/eval/: page.tsx
codexa-ui/app/workspace/: page.tsx
codexa-ui/components/: WelcomeModal.tsx
codexa-ui/components/Chat/: ChatWindow.tsx
codexa-ui/components/Layout/: AppLayout.tsx  TopBar.tsx
codexa-ui/components/Panels/: ContextPanel.tsx  VisualGraph.tsx
codexa-ui/components/Sidebar/: RepoTree.tsx  Sidebar.tsx
codexa-ui/lib/: api.ts
codexa/app/: di.py  main.py  security.py
codexa/controllers/: analyze_controller.py  ask_controller.py  dependency_controller.py  eval_controller.py  explain_controller.py  files_controller.py  generate_controller.py  overview_controller.py  repos_controller.py  search_controller.py
codexa/models/: parsed_repository.py
codexa/observability/: metrics.py  tracker.py
codexa/schemas/: ask.py  repos.py
codexa/services/agents/: coding_mentor_agent.py  memory_agent.py  orchestration.py  planner_agent.py  repo_analyst_agent.py  retrieval_agent.py
codexa/utils/: config.py
codexa/views/: streamlit_app.py
infra/caddy/: Caddyfile
ops/: prometheus.yml
tests/: test_answer_service.py  test_eval.py  test_faiss_retriever.py  test_repo_state_store.py  test_security.py
(+24 files in other folders)
