[project]
name = "codexa"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904", "B905", "N806", "SIM108", "E402", "W291"]

[tool.ruff.lint.isort]
known-first-party = ["codexa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
